--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 .env.test.local
 .env.production.local
 .env
+.firebase
+.github/workflows
+.firebaserc
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
