--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 /node_modules
 /.pnp
 .pnp.js
+/.firebase
+/.github/workflows
+/.firebaserc
+/.eslintcache
 
 # testing
 /coverage
@@ -18,10 +22,6 @@
 .env.test.local
 .env.production.local
 .env
-.firebase
-.github/workflows
-.firebaserc
-.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
