--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-/.firebase
-/.github/workflows
-/.firebaserc
-/.eslintcache
 
 # testing
 /coverage
@@ -27,3 +23,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
+.firebase
+.eslintcache
