--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "npm": "7.5.2"
   },
   "scripts": {
-    "client": "cd client && yarn start",
+    "client": "cd client && npm run start",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
@@ -24,6 +24,8 @@
     "stripe": "^6.36.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/stripe": "^8.0.417",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
   }
